# HWCodeCraft2021_semi

./: README.md
data/: .gitignore  gen-test.ans  test copy 2.ans  test copy.ans  test.txt  training-2.out.txt
src/: .gitignore  CodeCraft_zip.sh  build_and_run.sh
src/CodeCraft-2021/: .gitignore  CMakeLists.txt  data.h  debug.h  io.h  main.cpp  migrate.h  pack.sh  pack_multiple.py  solve.h  util.h
src/CodeCraft-2021/tmp/: merged_file.cpp
tool/: README.md  analysis.py
